--- a/style.css
+++ b/style.css
@@ -11,3 +11,13 @@ body{
   margin: 0;
 }
 
+.buttons{
+  display: flex;
+  flex-direction: column;
+}
+
+.btn{
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: 0.5px solid black;
+}
