--- a/style.css
+++ b/style.css
@@ -11,13 +11,48 @@ body{
   margin: 0;
 }
 
+h1{
+  margin-bottom: 20px;
+}
+
+.container{
+  display: flex;
+  justify-content: space-between;
+  width: 60%;
+  height: 50%;
+  margin-top: 20px;
+}
+
 .buttons{
   display: flex;
   flex-direction: column;
+  border-right: 2px solid black;
+  padding-right: 20px;
+  justify-content: space-around;
+  
 }
 
 .btn{
   padding: 10px 20px;
   border-radius: 10px;
   border: 0.5px solid black;
+  font-size: 14px;
+  font-weight: bold;
+  width: 100%;
 }
+
+.data{
+  width: 60%;
+}
+
+.label{
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 2px solid black;
+}
+
+.name{
+  font-weight: bold;
+  font-size: 36px;
+}
+
