--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ h1{
 
 .container{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   width: 60%;
-  height: 50%;
+  height: 40%;
   margin-top: 20px;
 }
 
@@ -41,18 +41,29 @@ h1{
   width: 100%;
 }
 
+.btn:focus{
+  outline: 0;
+}
+
 .data{
   width: 60%;
+  margin-left: 20px;
 }
 
 .label{
   display: flex;
   justify-content: space-between;
   border-bottom: 2px solid black;
+  align-items: center;
+  padding: 10px 0;
 }
 
 .name{
   font-weight: bold;
-  font-size: 36px;
+  font-size: 28px;
+}
+
+.wealth{
+  font-size: 28px;
 }
 
