--- a/style.css
+++ b/style.css
@@ -60,11 +60,11 @@ h1{
 
 .name{
   font-weight: bold;
-  font-size: 28px;
+  font-size: 38px;
 }
 
 .wealth{
-  font-size: 28px;
+  font-size: 38px;
 }
 
 .person{
@@ -72,5 +72,12 @@ h1{
   justify-content: space-between;
   padding-bottom: 5px;
   font-size: 18px;
+}
+
+.curr-total{
+  display: flex;
+  justify-content: space-between;
+  font-size: 24px;
+  background-color: #fff;
 }
 
