--- a/style.css
+++ b/style.css
@@ -1,56 +1,60 @@
-*{
+* {
   box-sizing: border-box;
 }
 
-body{
-  background-color: pink;
+body {
+  background-color: #FFC0CB;
+  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
 }
 
-h1{
+.container {
+  display: flex;
+  max-width: 100%;
+  width: 60%;
+  padding: 20px;
+  margin: 0 auto;
+}
+
+h1 {
   margin-bottom: 20px;
 }
 
-.container{
-  display: flex;
-  justify-content: center;
-  width: 60%;
-  height: 40%;
-  margin-top: 20px;
+
+
+aside {
+  border-right: 2px solid black;
+  padding: 10px 20px;
 }
 
-.buttons{
-  display: flex;
-  flex-direction: column;
-  border-right: 2px solid black;
-  padding-right: 20px;
-  justify-content: space-around;
+button {
+  cursor: pointer;
+  background-color: #fff;
+  border: solid 1px #111;
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 20px;
   
 }
 
-.btn{
-  padding: 10px 20px;
-  border-radius: 10px;
-  border: 0.5px solid black;
-  font-size: 14px;
-  font-weight: bold;
-  width: 100%;
-}
-
-.btn:focus{
+.btn:focus {
   outline: 0;
 }
 
-.data{
-  width: 60%;
-  margin-left: 20px;
+.data {
+  flex: 1;
+  padding: 10px 20px;
 }
 
-.label{
+.label {
   display: flex;
   justify-content: space-between;
   border-bottom: 2px solid black;
@@ -58,26 +62,24 @@ h1{
   padding: 10px 0;
 }
 
-.name{
-  font-weight: bold;
+h2{
   font-size: 38px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 2px solid black;
+  margin: 0 0 20px;
 }
 
-.wealth{
-  font-size: 38px;
-}
-
-.person{
+.person {
   display: flex;
   justify-content: space-between;
   padding-bottom: 5px;
-  font-size: 18px;
+  font-size: 20px;
 }
 
-.curr-total{
+.curr-total {
   display: flex;
   justify-content: space-between;
   font-size: 24px;
   background-color: #fff;
 }
-
