--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 
 h1 {
   margin-bottom: 20px;
+  color: #fff;
 }
 
 
@@ -68,6 +69,7 @@ h2{
   justify-content: space-between;
   border-bottom: 2px solid black;
   margin: 0 0 20px;
+  color: #fff;
 }
 
 .person {
@@ -75,6 +77,7 @@ h2{
   justify-content: space-between;
   padding-bottom: 5px;
   font-size: 20px;
+  color: #fff;
 }
 
 .curr-total {
